<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="260dp"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#0080B4"
            android:text="@string/tw_btn_txt_login"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_layout"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_twitter_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:hint="@string/username_twitter" />

        <EditText
            android:id="@+id/share_text"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:hint="@string/twitter_share_text"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/twitter_btn_share"
            android:background="#0080B4"
            android:textColor="#fff" />
    </LinearLayout>

</LinearLayout>