<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="0.50" >


    <!-- <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.50"
        android:background="@drawable/help_img1" /> -->

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:contentDescription="@string/help_screen_information"
        android:src="@drawable/scan_full_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvtext_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/help_text_padding"
            android:text="@string/help_support_text"
            android:textSize="@dimen/help_text_size"
            android:singleLine="false"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tvWebsite_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:textSize="@dimen/help_text_size"
            android:linksClickable="true"
            android:text="@string/filmsync_site_url"
            android:textColor="#fff"
            android:textColorLink="#fff"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>